--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "axios": "^1.7.7",
     "firebase": "^10.13.2",
+    "lodash": "^4.17.21",
     "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
